--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "strict": true,
     "resolveJsonModule": true,
     // "isolatedModules": true,
+    "suppressImplicitAnyIndexErrors": true,
     "esModuleInterop": true,
     "noEmit": true,
     "noUnusedLocals": true,
