--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "vite": "^4.1.0"
   },
   "dependencies": {
-    "chart.js": "^4.2.1"
+    "chart.js": "^4.2.1",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^2.29.3"
   }
 }
