--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "chart.js": "^4.2.1",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "countup.js": "^2.4.2",
     "date-fns": "^2.29.3"
   }
 }
