add biome for linting

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.1.2",
     "typescript": "^5.7.2",
     "vite": "^7.0.4"
   },
