--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Install dependencies
         run: bun install
       - name: Build
-        run: bun run build
+        run: VITE_DEPLOY_TARGET=github bun run build
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
