--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vite": "^7.1.2"
   },
   "dependencies": {
+    "@types/node": "^24.3.0",
     "@types/uuid": "^10.0.0",
     "chart.js": "^4.5.0",
     "chartjs-adapter-date-fns": "^3.0.0",
